--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -13,10 +13,14 @@
     <input type="password" name="password" id="password"/>
     </br>
     <input type="submit" name="Login"/>
+    <br/>
 
     <div th:if="${param.error}" style="color: red">
         Неправильное имя или пароль
     </div>
+
+    <a href="/auth/registration">Зарегистрироваться</a>
+
 </form>
 </body>
 </html>
