--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Login page</title>
 </head>
 <body>
 <form name="f" method="post" action="/process_login">
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+
     <label for="username">Введите имя пользователя: </label>
     <input type="text" name="username" id="username"/>
     </br>
     <label for="password">Введите пароль: </label>
     <input type="password" name="password" id="password"/>
     </br>
-    <input type="submit" name="Login"/>
+    <input type="submit" name="Войти"/>
     <br/>
 
     <div th:if="${param.error}" style="color: red">
