--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Hello</title>
@@ -7,6 +7,8 @@
 <body>
 <h1>Hello world!</h1>
 <br/>
-<a href="/logout">Выйти</a>
+<form th:action="@{/logout}" th:method="POST">
+    <input type="submit" value="logout" />
+</form>
 </body>
 </html>
